hphp/hack/test/typecheck/reactive/mutable_as_hint6.php
<?hh
<<file: __EnableUnstableFeatures('coeffects_provisional')>>

class A {
  <<__NonRx("what?")>>
  public function m(<<__OwnedMutable>> A $a): void {
  }
}
